--- a/DimageBoot/src/main/resources/static/css/style.css
+++ b/DimageBoot/src/main/resources/static/css/style.css
@@ -13,3 +13,11 @@ table {
 table th, table td {
     padding: 5px;
 }
+
+table, th, td, tr {
+	border: 1px solid black;
+}
+
+td {
+	padding-right: 30px;
+}
