--- a/DimageBoot/src/main/resources/templates/view.html
+++ b/DimageBoot/src/main/resources/templates/view.html
@@ -1,29 +1,40 @@
 <html>
 <head>
-<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/vue@2.6.10/dist/vue.js"></script>
-<title>Spring Boot - Hibernate</title>
+
+<link rel="stylesheet" type="text/css" href="../css/style.css">
+<link rel="stylesheet" type="text/css" href="../css/boostrap.css">
+<script type="text/javascript" src="../js/boostrap.js"></script>
+
+
 </head>
+
 <body>
-  <a>List Customer</a> 
-  <br/> <br/>
-  
-  <table>
-    <tr>
-      <td>Staff_CD: </td>
-      <td><p /></td>
-    </tr>
-    <tr>
-      <td>Name: </td>
-      <td><p /></td>
-    </tr>
-    <tr>
-      <td>Address: </td>
-      <td><p /></td>
-    </tr>
-  </table>
+
+	<h1>User Information:</h1>
+
+	<div id="app">
+	 	<table>
+			<tr>
+				<th>Id</th>
+				<th>staff_cd</th>
+				<th>Name</th>
+				<th>Address</th>
+				<th>Edit</th>
+				<th>Delete</th>
+			</tr>
+			<tr v-for='data in users'>
+				<td>{{data.user_id}}</td>
+				<td>{{data.staff_cd}}</td>
+				<td>{{data.staff_name}}</td>
+				<td>{{data.staff_add}}</td>
+				<td><a href="./update">Edit</a></td>
+				<td><a href="./delete">Delete</a></td>
+			</tr>
+		</table>
+	</div>
+
 </body>
+<script type="text/javascript" src="../js/vue.js"></script>
+<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+<script type="text/javascript" src="../js/view.js"></script>
 </html>
