--- a/DimageBoot/src/main/resources/templates/create.html
+++ b/DimageBoot/src/main/resources/templates/create.html
@@ -44,8 +44,8 @@
 			<div class="form-inline">
 				<label  class="col-sm-2" for="staffrole">Staff Role</label> 
 				<select class="form-control col-sm-2" id="staffrole" v-model="staffrole" name="staff_role">
-					<option value="0">user</option>
-					<option value="1">admin</option>
+					<option value="user">user</option>
+					<option value="admin">admin</option>
 				</select>
 			 </div>
 			<div class="form-inline  ">
