--- a/DimageBoot/src/main/resources/templates/view.html
+++ b/DimageBoot/src/main/resources/templates/view.html
@@ -41,8 +41,8 @@
 					<td><input  class=" form-control" id="users.staffmobile" v-model="users.data.staff_mobile" type="text" name="staff_mobile" ></td>
 					<td>
 						<select class="form-control" id="users.staffrole" v-model="users.data.staff_role" name="staff_role"> 
-							<option value="0">user</option>
-							<option value="1">admin</option>
+							<option value="user">user</option>
+							<option value="admin">admin</option>
 						</select>
 					</td>
 					<td><input  class=" form-control" id="create_date" v-model="users.data.create_date" type="text" name="create_date" ></td>
