--- a/DimageBoot/src/main/resources/templates/home.html
+++ b/DimageBoot/src/main/resources/templates/home.html
@@ -1,8 +1,33 @@
 <html>
 <header>
+<link rel="stylesheet"
+	href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
+<script
+	src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+<script
+	src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+<script
+	src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
 </header>
 <body>
 		Welcome 
+		<div id="app">
+			<a type="button" class="btn btn-success" v-bind:href="'./login'">User Login</a>
+			
+			<a type="button" class="btn btn-success" v-bind:href="'./loginAdmin'">Admin Login</a>
+		</div>
 
 </body>
+<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+
+<script>
+new Vue({
+	  el: "#app",
+	  data: {
+	  	msg: '',
+	  }
+	 })
+
+</script>
 </html>
