--- a/DimageBoot/src/main/resources/templates/login_user.html
+++ b/DimageBoot/src/main/resources/templates/login_user.html
@@ -1,35 +1,32 @@
-<html xmlns:th="http://www.thymeleaf.org">
+<html>
 <head>
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
-
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
-  
 </head>
 <body>
  
   <div class="row">
 	  <div class="col-sm-4"></div>
 	  <div class="col-sm-4">
-	   <h1>login-Admin</h1>
-		  <form action="./api/admin-login" >
+	   <h1>login</h1>
+		  <form action="./api/user-login" >
 			  <div class="form-group">
 			    <label for="staffcd">Staff_cd:</label>
-			    <input type="text" class="form-control " placeholder="Enter staff cd : DSVN01" id="staffcd"  v-model ="username" name="staff_cd">
+			    <input type="text" class="form-control " placeholder="Enter staff cd : DSVN02" id="staffcd"   name="staff_cd">
 			  </div>
 			  <div class="form-group">
 			    <label for="pwd">Password:</label>
-			    <input type="password" class="form-control" placeholder="Enter password :123456" id="pwd" v-model ="password" name="staff_password">
+			    <input type="password" class="form-control" placeholder="Enter password :123456" id="pwd" name="staff_password">
 			  </div>
-			  <button type="submit" class="btn btn-primary">login</button>
-			</form>
+			  <button class="form-control  btn btn-primary " type="submit" >login</button>
+		</form>
 	</div>
   </div>
 
 </body>
 <!-- <script type="text/javascript" src="./js/vue.js"></script> -->
-<!--   <script src="https://cdnjs.cloudflare.com/ajax/libs/vuex/3.2.0/vuex.js"></script> -->
 <!-- <script src="https://unpkg.com/axios/dist/axios.min.js"></script> -->
 <!-- <script type="text/javascript" src="./js/list.js"></script> -->
 <script>
